fix: correct dist options, base and re-deploy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="/public/logo-cporg.svg" alt="" class="logo">
+      <img src="logo-cporg.svg" alt="" class="logo">
 
       <div class="site-name">
         <h2>CPOrg-RS</h2>
@@ -26,9 +26,9 @@
     </div>
 
     <div class="social-links">
-      <img src="/public/facebook-logo.png" alt="">
-      <img src="/public/instagram-logo.png" alt="">
-      <img src="/public/youtube-logo.png" alt="">
+      <img src="/facebook-logo.png" alt="">
+      <img src="/instagram-logo.png" alt="">
+      <img src="/youtube-logo.png" alt="">
     </div>
 
     <div class="page-title">
@@ -49,9 +49,9 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="/public/image01.webp" alt=""></div>
-        <div class="swiper-slide"><img src="/public/image02.webp" alt=""></div>
-        <div class="swiper-slide"><img src="/public/image03.webp" alt=""></div>
+        <div class="swiper-slide"><img src="/image01.webp" alt=""></div>
+        <div class="swiper-slide"><img src="/image02.webp" alt=""></div>
+        <div class="swiper-slide"><img src="/image03.webp" alt=""></div>
         ...
       </div>
       <!-- If we need pagination -->
@@ -70,7 +70,7 @@
     <section class="section-01">
 
       <div class="section-01-img">
-        <img src="/public/image04.webp" alt="">
+        <img src="/image04.webp" alt="">
       </div>
 
       <div class="section-01-content">
@@ -104,14 +104,14 @@
       </div>
 
       <div class="section-01-img">
-        <img src="/public/image05.webp" alt="">
+        <img src="/image05.webp" alt="">
       </div>
     </section>
 
     <section class="section-01">
 
       <div class="section-01-img">
-        <img src="/public/image06.webp" alt="">
+        <img src="/image06.webp" alt="">
       </div>
 
       <div class="section-01-content">
@@ -132,11 +132,11 @@
       </div>
     </section>
     <section class="section-02">
-      <img src="/public/image07.webp" alt="">
+      <img src="/image07.webp" alt="">
     </section>
 
     <section class="section-03">
-      <img src="/public/image08.webp" alt="">
+      <img src="/image08.webp" alt="">
       <h3>
         Produto Orgânico: Melhor para a Vida! <br>
 
